--- a/styles/style.scss
+++ b/styles/style.scss
@@ -120,6 +120,9 @@ img {
     @include colors($plantGreen, 0, none);
     transition: all 0.25s;
     object-fit: contain;
+    &:hover {
+        background-color: $lightgreen;
+    }
 }
 
 .textContainer,
@@ -151,6 +154,10 @@ button:hover {
     background-color: $lightgreen;
     transition: all 0.25s;
     cursor: pointer;
+}
+
+.logo {
+    filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%); 
 }
 
 .btnVar2 {
@@ -187,9 +194,6 @@ header nav {
     height: 10vh;
     position: relative;
     @include colors($white, 0, 0 0 8px rgba(0, 0, 0, 0.25));
-    img {
-        filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);            
-    }
     .wrapper ul {
         text-transform: uppercase;
         font-weight: 600;      
@@ -200,6 +204,32 @@ header nav {
                 width: 1.75rem;
             }
         }
+        .navHover {
+            position: relative;
+            a:hover,
+            a:focus {
+                color: $plantGreen;
+            }
+            a.active {
+                color: $lightgreen;
+                font-weight: 700;
+            }
+        }
+        .navHover::after {
+            content: '';
+            height: 5px;
+            width: 100%;
+            background-color: $lightgreen;
+            position: absolute;
+            left: 0;
+            bottom: -1rem; 
+            opacity: 0;
+            transition: all 0.25s;
+            pointer-events: none;
+        }
+        .navHover:hover::after {
+            opacity: 1;
+        }
     }
     .hamburgerContainer {
         display: none;
@@ -208,37 +238,6 @@ header nav {
             color: $black;
         }
     }
-}
-
-.navHover {
-    position: relative;
-}
-
-.navHover a:hover,
-.navHover a:focus {
-    color: $plantGreen;
-}
-
-.navHover a.active {
-    color: $lightgreen;
-    font-weight: 700;
-}
-
-.navHover::after {
-    content: '';
-    height: 5px;
-    width: 100%;
-    background-color: $lightgreen;
-    position: absolute;
-    left: 0;
-    bottom: -1rem; 
-    opacity: 0;
-    transition: all 0.25s;
-    pointer-events: none;
-}
-
-.navHover:hover::after {
-    opacity: 1;
 }
 
 //header section//
@@ -267,14 +266,12 @@ header {
         }
     }
 }
-
     //zoom-in-zoom-out hover
 .hero img {
     transition: all 1s ease;
-}
-
-.hero img:hover {
-    transform: scale(1.2);
+    &:hover {
+        transform: scale(1.2);
+    }
 }
 
 //about section//
@@ -306,38 +303,36 @@ header {
         @include textStyling(0.075rem, 2rem, capitalize, none);
         @include colors($lightgreen, $white, none);
         @include boxModel(auto, auto, 5rem 2rem, none, 4rem, 0 0 0 2rem);
-        
     }
 }
 
 //shop section//
 .productGallery {
     flex-wrap: wrap;
-}
-
-.productGallery li {
-    max-width: 24%;
-    margin-bottom: 3rem;
-    position: relative;
-    .imageContainer {
-        width: 100%;
-        font-size: 0;
-    }
-    .textContainer {
-        @include boxModel(100%, auto, 0.75rem, 1.5px solid $lightgrey, none, none);
-        background-color: $white;
-        border-top: none;
-        p {
-            padding-top: 0.75rem;
+    li {
+        max-width: 24%;
+        margin-bottom: 3rem;
+        position: relative;
+        .imageContainer {
+            width: 100%;
+            font-size: 0;
         }
-        .price {
-            padding-bottom: 0.75rem;
-            span {
-                text-decoration: line-through;
+        .textContainer {
+            @include boxModel(100%, auto, 0.75rem, 1.5px solid $lightgrey, none, none);
+            background-color: $white;
+            border-top: none;
+            p {
+                padding-top: 0.75rem;
             }
-        }
-        button {
-            position: absolute;
+            .price {
+                padding-bottom: 0.75rem;
+                span {
+                    text-decoration: line-through;
+                }
+            }
+            button {
+                position: absolute;
+            }
         }
     }
 }
@@ -372,20 +367,17 @@ header {
         }
     }
 }
-
     //zoom-in-and-out on hover//
 .mainGallery img {
     transition: all 1s ease;
-}
-
-.mainGallery img:hover {
-    transform: scale(1.1);
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 //blog section//
 .blog {
-    background-color: $plantGreen;
-    color: white;
+    @include colors($plantGreen, $white, none);
     .blogPost {
         @include colors($white, $black, 0 5px 8px rgba(0, 0, 0, 0.3));
         @include boxModel(32%, auto, 1rem, none, 6px, none);
@@ -396,8 +388,7 @@ header {
             }
         }
         .textContainer {
-            padding: 1rem 0;
-            width: 100%;
+            @include boxModel(100%, auto, 1rem 0, none, none, none);
             p {
                 padding: 1rem 0;
             }
@@ -406,86 +397,77 @@ header {
 }
 
 //footer section//
-footer {
-    .footerCol {
-        width: 25%;
-        height: 42vh;
-        h3 {
-            padding-bottom: 2rem;
-            @include textStyling(0.075rem, 1.5rem, 0, none);
+.footerCol {
+    @include boxModel(25%, 42vh, none, none, none, none);
+    h3 {
+        padding-bottom: 2rem;
+        @include textStyling(0.075rem, 1.5rem, 0, none);
+    }
+}
+.first {
+    padding-right: 2rem;
+    }
+    .division {
+        justify-content: space-evenly;
+        nav ul li {
+            margin-right: 1rem;
         }
     }
-    .first {
-        padding-right: 2rem;
-        .imageContainer img {
-            filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);            
+.second {
+    padding-left: 1rem;
+    nav ul {
+        align-items: flex-start;
+        height: 100%;
+        a {
+            transition: all 0.25s;
+            &:hover {
+                color: $lightgreen;
+                font-weight: 600;
             }
-        }
-        .division {
-            justify-content: space-evenly;
-            nav ul li {
-                margin-right: 1rem;
-            }
-            nav .svg:hover {
-                background-color: $lightgreen;
-            }
-        }
-    .second {
-        padding-left: 1rem;
-        nav ul {
-            align-items: flex-start;
-            height: 100%;
-            a {
-                transition: all 0.25s;
-            }
-        }
-        nav a:hover {
-            color: $lightgreen;
-            font-weight: 600;
         }
     }
-    .third .imageContainer {
-        width: calc(100% / 3);
+}
+.third .imageContainer {
+    width: calc(100% / 3);
+    }
+    .textContainer {
+        @include boxModel(75%, auto, 0 0 0 1rem, none, none, none);
+        p {
+            padding: 0.5rem 0;
         }
-        .textContainer {
-            width: 75%;
-            padding-left: 1rem;
-            p {
-                padding: 0.5rem 0;
-            }
-            .item {
-                @include fontStyling($secondaryFont, 0.8rem, 600);
-                padding: 0;
-            }
+        .item {
+            @include fontStyling($secondaryFont, 0.8rem, 600);
+            padding: 0;
         }
-    .fourth {
-        padding-left: 1.7rem;
-        form {
-            padding-top: 0.5rem;
-            width: 100%;
-            input[type=text] {
-                @include boxModel(100%, auto, 1rem, $borderInput, 4px, none);
-                outline: none;
+    }
+.fourth {
+    padding-left: 1.7rem;
+    form {
+        padding-top: 0.5rem;
+        width: 100%;
+        input[type=text] {
+            @include boxModel(100%, auto, 1rem, $borderInput, 4px, none);
+            outline: none;
+            &:focus {
+                border: 2px solid $lightgreen;
+                font-size: 0.9rem;
             }
-            input::placeholder {
+            &::placeholder {
                 color: $black;
                 font-size: 0.9rem;
             }
-            input[type=text]:focus {
-                border: 2px solid $lightgreen;
-            }
         }
     }
-    .footerImage {
-        font-size: 0;
-    }
-    .copyright {
-        @include colors($plantGreen, $white, none);
-        font-size: 0.75rem;
-        text-align: center;
-        a {
-            color: $white;
-        }
+}
+.footerImage {
+    font-size: 0;
+}
+.copyright {
+    @include colors($plantGreen, $white, none);
+    font-size: 0.75rem;
+    text-align: center;
+    a {
+        color: $white;
     }
 }
 
@@ -508,10 +490,10 @@ footer {
         text-transform: capitalize;
         @include fontStyling(0, 2rem, 500);
         position: absolute;
+        z-index: 1;
         top: 33%;
         left: 50%;
         transform: translate(-50%, -32%);
-        z-index: 1;
     }
 }
 
@@ -538,25 +520,23 @@ footer {
         box-shadow: $boxShadow;         
         .line1and2 {
             flex-wrap: wrap;
-            input {
+            input[type=text] {
                 @include boxModel(48%, auto, 1rem, $borderInput, 6px, 0 0 2rem 0);
             }
         }
-        .line3 input,
+        .line3 input[type=text],
         textarea {
             @include boxModel(100%, auto, 1rem, $borderInput, 6px, 0 0 2rem 0);
         }
         input[type=text],
         textarea {
             outline: none;
-        }
-        input[type=text]:focus,
-        textarea:focus {
-            border: 2px solid $lightgreen;
-        }
-        input[type=text]::placeholder,
-        textarea::placeholder {
-            font-size: 0.85rem;
+            &:focus {
+                border: 2px solid $lightgreen;
+            }
+            &::placeholder {
+                font-size: 0.85rem;
+            }
         }
     }
     button {
