--- a/styles/style.css
+++ b/styles/style.css
@@ -426,6 +426,307 @@ button:hover {
   align-items: center;
 }
 
+.contactHeader {
+  height: 100%;
+}
+.contactHeader .contactBanner {
+  background-image: url(../assets/contact.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  filter: brightness(70%);
+  height: 45vh;
+  position: relative;
+  z-index: -1;
+}
+.contactHeader h2 {
+  color: #fff;
+  text-transform: capitalize;
+  font-family: 0;
+  font-size: 2rem;
+  font-weight: 500;
+  position: absolute;
+  z-index: 1;
+  top: 33%;
+  left: 50%;
+  transform: translate(-50%, -32%);
+}
+
+.contact .wrapper {
+  height: 100%;
+  align-items: flex-start;
+}
+.contact .wrapper .textContainer {
+  height: 100%;
+  width: 47.5%;
+}
+.contact .wrapper .contactContainer li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: auto;
+  height: auto;
+  padding: 2.75rem 0 2.75rem 3rem;
+  border: none;
+  border-radius: none;
+  margin: 0 0 3rem 0;
+  border-left: 10px solid #207200;
+  box-shadow: 0 0 15px rgba(189, 189, 189, 0.4);
+}
+.contact .wrapper .contactContainer li h3 {
+  padding-bottom: 0.5rem;
+}
+.contact .wrapper form {
+  text-align: center;
+  padding: 3rem;
+  box-shadow: 0 0 15px rgba(189, 189, 189, 0.4);
+}
+.contact .wrapper form .line1and2 {
+  flex-wrap: wrap;
+}
+.contact .wrapper form .line1and2 input[type=text] {
+  width: 48%;
+  height: auto;
+  padding: 1rem;
+  border: 1.5px solid #EAEAEA;
+  border-radius: 6px;
+  margin: 0 0 2rem 0;
+}
+.contact .wrapper form .line3 input[type=text],
+.contact .wrapper form textarea {
+  width: 100%;
+  height: auto;
+  padding: 1rem;
+  border: 1.5px solid #EAEAEA;
+  border-radius: 6px;
+  margin: 0 0 2rem 0;
+}
+.contact .wrapper form input[type=text],
+.contact .wrapper form textarea {
+  outline: none;
+}
+.contact .wrapper form input[type=text]:focus,
+.contact .wrapper form textarea:focus {
+  border: 2px solid #5EA85E;
+}
+.contact .wrapper form input[type=text]::-moz-placeholder, .contact .wrapper form textarea::-moz-placeholder {
+  font-size: 0.9rem;
+}
+.contact .wrapper form input[type=text]::placeholder,
+.contact .wrapper form textarea::placeholder {
+  font-size: 0.9rem;
+}
+.contact .wrapper button {
+  width: auto;
+  height: auto;
+  padding: 1.75rem 2.25rem;
+  border: none;
+  border-radius: 2.25rem;
+  margin: none;
+  font-size: 1rem;
+}
+
+@media (max-width: 940px) {
+  .sectionHeading p {
+    width: 85%;
+  }
+  .productGallery li {
+    max-width: 32%;
+  }
+  .hide {
+    display: none;
+  }
+  .contact .wrapper {
+    height: 100%;
+    flex-direction: column;
+  }
+  .contact .wrapper .textContainer {
+    width: 80%;
+    height: auto;
+    padding: none;
+    border: none;
+    border-radius: none;
+    margin: 0 auto;
+  }
+  footer .wrapper {
+    flex-wrap: wrap;
+  }
+  footer .wrapper .footerCol {
+    width: 32%;
+  }
+  footer .wrapper .fourth {
+    background-color: #207200;
+    color: #fff;
+    box-shadow: none;
+    width: 100%;
+    height: auto;
+    padding: 2rem;
+    border: none;
+    border-radius: 4px;
+    margin: 3rem 0 0 0;
+  }
+  footer .wrapper .fourth h3 {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1rem;
+    text-align: center;
+  }
+  footer .wrapper .fourth .division {
+    padding-top: 1rem;
+    align-items: center;
+  }
+  footer .wrapper .fourth .division p {
+    padding: 1rem 0;
+    text-align: center;
+  }
+  footer .wrapper .fourth .division form {
+    width: 80%;
+    margin-bottom: 1rem;
+  }
+  footer .wrapper .fourth .division form input[type=text]::-moz-placeholder {
+    text-align: center;
+  }
+  footer .wrapper .fourth .division form input[type=text]::placeholder {
+    text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  header nav .wrapper ul li {
+    margin: 0;
+  }
+  header nav .wrapper ul li .navHide {
+    display: none;
+  }
+  header .navHide {
+    display: none;
+  }
+  header nav .hamburgerContainer {
+    display: block;
+    order: -1;
+  }
+  .hero .wrapper {
+    flex-direction: column;
+    padding: 1rem;
+  }
+  .hero .wrapper .textContainer {
+    width: 100%;
+    height: auto;
+    padding: 1.5rem 0 0 0;
+    border: none;
+    border-radius: none;
+    margin: 0;
+    text-align: center;
+  }
+  .hero .wrapper .textContainer h1 {
+    font-size: 2rem;
+  }
+  .hero .wrapper .imageContainer {
+    order: -1;
+  }
+  .about .wrapper {
+    flex-direction: column;
+  }
+  .about .wrapper .textContainer {
+    width: 100%;
+    height: auto;
+    padding: 0;
+    border: none;
+    border-radius: none;
+    margin: 0;
+  }
+  .about .wrapper .aboutText {
+    order: 1;
+    padding-top: 5rem;
+  }
+  .about .wrapper .textContainer .aboutFact {
+    width: 90%;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .sectionHeading p {
+    width: 100%;
+    padding: 1rem 1rem 2rem 1rem;
+  }
+  .productGallery li {
+    max-width: 48%;
+  }
+  .blog .wrapper ul {
+    flex-direction: column;
+  }
+  .blog .wrapper ul li {
+    width: 95%;
+    margin: 1rem 0;
+  }
+  footer .wrapper .footerCol {
+    width: 100%;
+    text-align: center;
+  }
+  .hide768px {
+    display: none;
+  }
+  footer .first {
+    margin: 0 auto;
+    padding: 0;
+  }
+  footer .first .imageContainer {
+    margin: 0 auto;
+    width: 25%;
+  }
+  footer .first .division {
+    align-items: center;
+  }
+  footer .first .division li {
+    margin: 0.5rem;
+  }
+  footer .first .division li .svg {
+    margin: 0;
+  }
+  footer .second {
+    height: 60%;
+    padding: 0;
+  }
+  footer .second h3 {
+    border-top: 4px solid #207200;
+    padding-top: 3.5rem;
+  }
+  footer .second nav ul {
+    align-items: center;
+  }
+  footer .second nav ul li {
+    padding: 0.5rem 0;
+  }
+  footer .second .division {
+    align-items: center;
+  }
+  .line1and2 {
+    flex-direction: column;
+  }
+  .contact .wrapper form .line1and2 input[type=text] {
+    width: 100%;
+  }
+}
+@media (max-width: 480px) {
+  .productGallery li {
+    max-width: 90%;
+    margin: 0 auto;
+    padding-bottom: 2rem;
+  }
+  .contact .wrapper .contactContainer li {
+    padding: 1rem;
+  }
+  .contact form {
+    padding: 1.5rem;
+  }
+  .contact form button {
+    padding: 1rem 1.5rem;
+    font-size: 0.75rem;
+  }
+}
 header nav {
   height: 10vh;
   position: relative;
@@ -482,23 +783,14 @@ header {
   height: 100vh;
   overflow: hidden;
 }
-
-.parallax {
-  background-image: url(../assets/header/background.png);
-  height: 100%;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.hero {
+header .hero {
   height: 90vh;
 }
-.hero .textContainer {
+header .hero .textContainer {
+  width: 50%;
   padding-right: 2rem;
 }
-.hero .textContainer h1 {
+header .hero .textContainer h1 {
   font-family: "Lora", serif;
   font-size: 2.5rem;
   font-weight: 900;
@@ -507,15 +799,23 @@ header {
   text-transform: capitalize;
   text-decoration: none;
 }
-.hero .textContainer p {
+header .hero .textContainer p {
   padding: 2rem 0;
 }
-
-.hero img {
+header .hero img {
   transition: all 1s ease;
 }
-.hero img:hover {
+header .hero img:hover {
   transform: scale(1.2);
+}
+
+.parallax {
+  background-image: url(../assets/header/background.png);
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .about .wrapper {
@@ -631,11 +931,10 @@ header {
   margin: 0 5px;
   overflow: hidden;
 }
-
-.mainGallery img {
+.gallery .wrapper .mainGallery img {
   transition: all 1s ease;
 }
-.mainGallery img:hover {
+.gallery .wrapper .mainGallery img:hover {
   transform: scale(1.1);
 }
 
@@ -755,14 +1054,11 @@ header {
 }
 .fourth form input[type=text]:focus {
   border: 2px solid #5EA85E;
-  font-size: 0.9rem;
 }
 .fourth form input[type=text]::-moz-placeholder {
-  color: #1A2428;
   font-size: 0.9rem;
 }
 .fourth form input[type=text]::placeholder {
-  color: #1A2428;
   font-size: 0.9rem;
 }
 
@@ -779,293 +1075,4 @@ header {
 }
 .copyright a {
   color: #fff;
-}
-
-.contactHeader {
-  height: 100%;
-}
-.contactHeader .contactBanner {
-  background-image: url(../assets/contact.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  filter: brightness(70%);
-  height: 45vh;
-  position: relative;
-  z-index: -1;
-}
-.contactHeader h2 {
-  color: #fff;
-  text-transform: capitalize;
-  font-family: 0;
-  font-size: 2rem;
-  font-weight: 500;
-  position: absolute;
-  z-index: 1;
-  top: 33%;
-  left: 50%;
-  transform: translate(-50%, -32%);
-}
-
-.contact .wrapper {
-  height: 100%;
-  align-items: flex-start;
-}
-.contact .wrapper .textContainer {
-  height: 100%;
-  width: 47.5%;
-}
-.contact .wrapper .contactContainer li {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: auto;
-  height: auto;
-  padding: 2.75rem 0 2.75rem 3rem;
-  border: none;
-  border-radius: none;
-  margin: 0 0 3rem 0;
-  border-left: 10px solid #207200;
-  box-shadow: 0 0 15px rgba(189, 189, 189, 0.4);
-}
-.contact .wrapper .contactContainer li h3 {
-  padding-bottom: 0.5rem;
-}
-.contact .wrapper form {
-  text-align: center;
-  padding: 3rem;
-  box-shadow: 0 0 15px rgba(189, 189, 189, 0.4);
-}
-.contact .wrapper form .line1and2 {
-  flex-wrap: wrap;
-}
-.contact .wrapper form .line1and2 input[type=text] {
-  width: 48%;
-  height: auto;
-  padding: 1rem;
-  border: 1.5px solid #EAEAEA;
-  border-radius: 6px;
-  margin: 0 0 2rem 0;
-}
-.contact .wrapper form .line3 input[type=text],
-.contact .wrapper form textarea {
-  width: 100%;
-  height: auto;
-  padding: 1rem;
-  border: 1.5px solid #EAEAEA;
-  border-radius: 6px;
-  margin: 0 0 2rem 0;
-}
-.contact .wrapper form input[type=text],
-.contact .wrapper form textarea {
-  outline: none;
-}
-.contact .wrapper form input[type=text]:focus,
-.contact .wrapper form textarea:focus {
-  border: 2px solid #5EA85E;
-}
-.contact .wrapper form input[type=text]::-moz-placeholder, .contact .wrapper form textarea::-moz-placeholder {
-  font-size: 0.85rem;
-}
-.contact .wrapper form input[type=text]::placeholder,
-.contact .wrapper form textarea::placeholder {
-  font-size: 0.85rem;
-}
-.contact .wrapper button {
-  width: auto;
-  height: auto;
-  padding: 1.75rem 2.25rem;
-  border: none;
-  border-radius: 2.25rem;
-  margin: none;
-  font-size: 1rem;
-}
-
-@media (max-width: 940px) {
-  .sectionHeading p {
-    width: 85%;
-  }
-  .productGallery li {
-    max-width: 32%;
-  }
-  .hide {
-    display: none;
-  }
-  .contact .wrapper {
-    height: 100%;
-    flex-direction: column;
-  }
-  .contact .wrapper .textContainer {
-    width: 80%;
-    margin: 0 auto;
-  }
-  footer .wrapper {
-    flex-wrap: wrap;
-  }
-  footer .wrapper .footerCol {
-    width: 32%;
-  }
-  footer .wrapper .fourth {
-    background-color: #207200;
-    color: #fff;
-    box-shadow: none;
-    width: 100%;
-    height: auto;
-    padding: 2rem;
-    border: none;
-    border-radius: 4px;
-    margin: 3rem 0 0 0;
-  }
-  footer .wrapper .fourth h3 {
-    border-bottom: 1px solid #fff;
-    padding-bottom: 1rem;
-    text-align: center;
-  }
-  footer .wrapper .fourth .division {
-    padding-top: 1rem;
-    align-items: center;
-  }
-  footer .wrapper .fourth .division p {
-    padding: 1rem 0;
-    text-align: center;
-  }
-  footer .wrapper .fourth .division form {
-    width: 80%;
-    margin-bottom: 1rem;
-  }
-  footer .wrapper .fourth .division form input::-moz-placeholder {
-    text-align: center;
-  }
-  footer .wrapper .fourth .division form input::placeholder {
-    text-align: center;
-  }
-}
-@media (max-width: 768px) {
-  header .navHide {
-    display: none;
-  }
-  header nav .wrapper ul li {
-    margin: 0;
-  }
-  header nav .hamburgerContainer {
-    display: block;
-    order: -1;
-  }
-  .hero .wrapper {
-    flex-direction: column;
-    padding: 1rem;
-  }
-  .hero .wrapper .textContainer {
-    width: 100%;
-    height: auto;
-    padding: 1.5rem 0 0 0;
-    border: none;
-    border-radius: none;
-    margin: 0;
-    text-align: center;
-  }
-  .hero .wrapper .textContainer h1 {
-    font-size: 2rem;
-  }
-  .hero .wrapper .imageContainer {
-    margin: 0 auto;
-    width: 60%;
-    order: -1;
-  }
-  .about .wrapper {
-    flex-direction: column;
-  }
-  .about .wrapper .textContainer {
-    width: 100%;
-    height: auto;
-    padding: 0;
-    border: none;
-    border-radius: none;
-    margin: 0;
-  }
-  .about .wrapper .aboutText {
-    order: 1;
-    padding-top: 5rem;
-  }
-  .about .wrapper .textContainer .aboutFact {
-    width: 90%;
-  }
-  h2 {
-    font-size: 1.5rem;
-  }
-  .sectionHeading p {
-    width: 100%;
-    padding: 1rem 1rem 2rem 1rem;
-  }
-  .blog .wrapper ul {
-    flex-direction: column;
-  }
-  .blog .wrapper ul li {
-    width: 95%;
-    margin: 1rem 0;
-  }
-  footer .wrapper .footerCol {
-    width: 100%;
-  }
-  .hide768px {
-    display: none;
-  }
-  footer .first {
-    text-align: center;
-    margin: 0 auto;
-    padding: 0;
-  }
-  footer .first .imageContainer {
-    margin: 0 auto;
-    width: 25%;
-  }
-  footer .first .division {
-    align-items: center;
-  }
-  footer .second {
-    text-align: center;
-    height: 60%;
-    padding: 0;
-  }
-  footer .second h3 {
-    border-top: 4px solid #207200;
-    padding-top: 3.5rem;
-  }
-  footer .second nav ul {
-    align-items: center;
-  }
-  footer .second nav ul li {
-    padding: 0.5rem 0;
-  }
-  footer .second .division {
-    align-items: center;
-  }
-  .line1and2 {
-    flex-direction: column;
-  }
-  .contact .wrapper form .line1and2 input[type=text] {
-    width: 100%;
-  }
-}
-@media (max-width: 480px) {
-  .productGallery li {
-    max-width: 90%;
-    margin: 0 auto;
-    padding-bottom: 2rem;
-  }
-  .contact .wrapper .contactContainer li {
-    padding: 1rem;
-  }
-  .contact .wrapper form {
-    padding: 1.5rem;
-  }
-  .contact .wrapper form button {
-    padding: 1rem 1.5rem;
-    font-size: 0.75rem;
-  }
 }
