fixed top nav cart bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -598,9 +598,6 @@ button:hover {
   header .navHide {
     display: none;
   }
-  header nav .wrapper ul li {
-    margin: 0;
-  }
   header nav .wrapper .hamburgerContainer {
     display: block;
     order: -1;
@@ -735,25 +732,23 @@ header nav .wrapper ul {
   text-transform: uppercase;
   font-weight: 600;
 }
-header nav .wrapper ul li {
-  margin-left: 2rem;
-}
 header nav .wrapper ul li .svg {
   all: revert;
   width: 1.75rem;
 }
-header nav .wrapper ul .navHover {
+header nav .navHover {
+  margin-right: 2rem;
   position: relative;
 }
-header nav .wrapper ul .navHover a:hover,
-header nav .wrapper ul .navHover a:focus {
+header nav .navHover a:hover,
+header nav .navHover a:focus {
   color: #207200;
 }
-header nav .wrapper ul .navHover a.active {
+header nav .navHover a.active {
   color: #5EA85E;
   font-weight: 700;
 }
-header nav .wrapper ul .navHover::after {
+header nav .navHover::after {
   content: "";
   height: 5px;
   width: 100%;
@@ -765,13 +760,14 @@ header nav .wrapper ul .navHover::after {
   transition: all 0.25s;
   pointer-events: none;
 }
-header nav .wrapper ul .navHover:hover::after {
+header nav .navHover:hover::after {
   opacity: 1;
 }
-header nav .hamburgerContainer {
+
+.hamburgerContainer {
   display: none;
 }
-header nav .hamburgerContainer .hamburger {
+.hamburgerContainer .hamburger {
   font-size: 1.5rem;
   color: #1A2428;
 }
@@ -1012,7 +1008,7 @@ header .hero img:hover {
   width: 33.3333333333%;
 }
 
-.textContainer {
+.third .textContainer {
   width: 75%;
   height: auto;
   padding: 0 0 0 1rem;
@@ -1020,10 +1016,10 @@ header .hero img:hover {
   border-radius: none;
   margin: none;
 }
-.textContainer p {
+.third .textContainer p {
   padding: 0.5rem 0;
 }
-.textContainer .item {
+.third .textContainer .item {
   font-family: "Lora", serif;
   font-size: 0.8rem;
   font-weight: 600;
