--- a/styles/sass/partials/_reuseableCode.scss
+++ b/styles/sass/partials/_reuseableCode.scss
@@ -89,6 +89,7 @@ button:hover {
     cursor: pointer;
 }
 
+// reference for logo filter: https://codepen.io/sosuke/pen/Pjoqqp 
 .logo {
     filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%); 
 }
