--- a/styles/style.css
+++ b/styles/style.css
@@ -593,10 +593,6 @@ button:hover {
   header .navHide {
     display: none;
   }
-  header nav .wrapper .hamburgerContainer {
-    display: block;
-    order: -1;
-  }
   .hero .wrapper {
     flex-direction: column;
     padding: 1rem;
@@ -752,12 +748,44 @@ header nav .navHover:hover::after {
   opacity: 1;
 }
 
-.hamburgerContainer {
-  display: none;
+.hamburger {
+  all: revert;
+  position: relative;
+  display: block;
+  width: 35px;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: white;
+  outline: none;
+  border: none;
 }
-.hamburgerContainer .hamburger {
-  font-size: 1.5rem;
-  color: #1A2428;
+
+.hamburger:hover {
+  background-color: white;
+}
+
+.hamburger .bar, .hamburger:after, .hamburger:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: black;
+  margin: 6px 0px;
+  transition: 0.4s;
+}
+
+.hamburger.activated:before {
+  transform: rotate(-45deg) translate(-8px, 6px);
+}
+
+.hamburger.activated:after {
+  transform: rotate(45deg) translate(-6px, -5px);
+}
+
+.hamburger.activated .bar {
+  opacity: 0;
 }
 
 header {
